fix: overflow notifications group header text with ellipses (#3500)
Fixes #3408

--- a/framework/core/less/forum/NotificationList.less
+++ b/framework/core/less/forum/NotificationList.less
@@ -68,14 +68,17 @@
     color: var(--heading-color) !important;
     padding: 8px 16px;
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 
     display: flex;
     align-items: center;
 
     // Prevent outline overflowing parent
     .add-keyboard-focus-ring-offset(-1px);
+
+    &, span {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   &-badges {
